PROJECT(voreentool)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)
INCLUDE(../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring VoreenTool Application")

SET(VRN_VOREENTOOL_SOURCES
    voreentool.cpp
)

SET(VRN_VOREENTOOL_HEADERS
)

# find Qt library
FIND_PACKAGE(Qt4 ${VRN_REQUIRED_QT_VERSION} REQUIRED QtCore QtGui QtOpenGL)

# Qt moc (currently not required)
#QT4_WRAP_CPP(VRN_VOREENTOOL_MOC_SOURCES ${VRN_VOREENTOOL_HEADERS})
#LIST(APPEND VRN_VOREENTOOL_SOURCES ${VRN_VOREENTOOL_HEADERS})
    
ADD_EXECUTABLE(voreentool 
    ${VRN_VOREENTOOL_SOURCES} ${VRN_VOREENTOOL_HEADERS} 
) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES} ${VRN_MODULE_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(voreentool tgt voreen_core voreen_qt ${VRN_EXTERNAL_LIBRARIES})

# add Qt dependency to target
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
TARGET_LINK_LIBRARIES(voreentool ${QT_LIBRARIES})

# deployment
IF(VRN_ADD_INSTALL_TARGET)
    INSTALL(TARGETS voreentool
        RUNTIME DESTINATION .
    )
ENDIF()
